[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/metal_lord/metal_lord.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/title.png" type="Texture" id=2]
[ext_resource path="res://assets/characters.png" type="Texture" id=3]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1480.0
margin_bottom = 820.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 537.0
margin_bottom = 740.0

[node name="LogoText" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 537.0
margin_bottom = 129.0
texture = ExtResource( 2 )

[node name="Menu Options" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 537.0
margin_bottom = 693.0
size_flags_vertical = 3
custom_constants/separation = 35
alignment = 1

[node name="FightBtn" type="Button" parent="HBoxContainer/VBoxContainer/Menu Options"]
margin_top = 69.0
margin_right = 537.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 1 )
text = "Fight!"

[node name="ManageBaseBtn" type="Button" parent="HBoxContainer/VBoxContainer/Menu Options"]
margin_top = 183.0
margin_right = 537.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 1 )
text = "Manage Base"

[node name="GunDesignerBtn" type="Button" parent="HBoxContainer/VBoxContainer/Menu Options"]
margin_top = 297.0
margin_right = 537.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 1 )
text = "gun Designer"

[node name="OptionsBtn" type="Button" parent="HBoxContainer/VBoxContainer/Menu Options"]
margin_top = 411.0
margin_right = 537.0
margin_bottom = 490.0
custom_fonts/font = SubResource( 1 )
text = "Options"

[node name="VersionAndCopyright" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 697.0
margin_right = 537.0
margin_bottom = 740.0

[node name="VersionLbl" type="Label" parent="HBoxContainer/VBoxContainer/VersionAndCopyright"]
margin_right = 537.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "v0.1.0 Dev"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 541.0
margin_right = 1360.0
margin_bottom = 740.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogoGraphic" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_left = 143.0
margin_top = 200.0
margin_right = 676.0
margin_bottom = 539.0
texture = ExtResource( 3 )
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Options/FightBtn" to="." method="_on_FightBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Options/ManageBaseBtn" to="." method="_on_ManageBaseBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Options/GunDesignerBtn" to="." method="_on_GunDesignerBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Options/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
